--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,12 @@ main {
   background-size: 100%;
   background-position: center;
   color: var(--tertiary);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  border-radius: 10px;
+  padding: 3rem;
+  margin: 1rem;
+  flex-basis: 50%;
+  flex: 1;
 }
 
 .flex-item {
@@ -328,13 +334,6 @@ main {
   };
 }
 
-.card {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-  border-radius: 10px;
-  max-width: 30rem;
-  padding: 3rem;
-  margin: 1rem;
-}
 
 .card h2 {
   font-size: 2rem;
@@ -365,17 +364,6 @@ h1 {
   font-size: 4rem;
   margin-bottom: 1rem;
   text-align: center;
-}
-
-div {
-  justify-content: center;
-}
-
-div.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .contact-form {
